--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -314,7 +314,7 @@
         <!--Overview-->
         <scene sceneID="IPR-fw-6YR">
             <objects>
-                <viewController id="Y1B-Nd-lxC" customClass="OverviewViewController" customModule="ChoresForCoinsiOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="overviewVC" id="Y1B-Nd-lxC" customClass="OverviewViewController" customModule="ChoresForCoinsiOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8sQ-Md-49K">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1134,7 +1134,7 @@
                                             <action selector="googleLoginBtn:" destination="cdO-Eu-gj5" eventType="touchUpInside" id="dh4-wy-Iia"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dGK-YH-XWN">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dGK-YH-XWN" customClass="FBSDKLoginButton">
                                         <rect key="frame" x="84.666666666666671" y="115.66666666666669" width="206.33333333333331" height="54"/>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                         <state key="normal" title=" " image="btnFacebook_L">
@@ -1232,7 +1232,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j2o-0w-M2F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-855.20000000000005" y="-1222.0389805097452"/>
+            <point key="canvasLocation" x="-855.20000000000005" y="-1222.1674876847292"/>
         </scene>
         <!--Email Login View Controller-->
         <scene sceneID="UZM-SH-LE1">
@@ -3226,8 +3226,8 @@
         <image name="topBar_L" width="766" height="55"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="A1z-JA-GPm"/>
-        <segue reference="7lE-kw-Qut"/>
-        <segue reference="3RF-ku-Rgp"/>
+        <segue reference="2Gk-b2-F02"/>
+        <segue reference="L0J-7I-SgR"/>
+        <segue reference="SmV-wp-1Wv"/>
     </inferredMetricsTieBreakers>
 </document>
