--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vEf-KN-FAV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cdO-Eu-gj5">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -1227,7 +1227,7 @@
                                         <rect key="frame" x="158" y="5.3333333333333712" width="60" height="30"/>
                                         <state key="normal" title="SIGN UP"/>
                                         <connections>
-                                            <segue destination="b6P-mi-Mj5" kind="presentation" id="aiR-rN-YLE"/>
+                                            <segue destination="b6P-mi-Mj5" kind="presentation" identifier="registrationSegue" id="aiR-rN-YLE"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1245,7 +1245,7 @@
                                         <state key="normal" title="SKIP"/>
                                         <connections>
                                             <action selector="toTabBarController:" destination="cdO-Eu-gj5" eventType="touchUpInside" id="ahY-zy-MiP"/>
-                                            <segue destination="vEf-KN-FAV" kind="show" id="A1z-JA-GPm"/>
+                                            <segue destination="vEf-KN-FAV" kind="show" identifier="goToProfileSegue" id="A1z-JA-GPm"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -2066,26 +2066,28 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m77-hq-huN" userLabel="CreateAccountButtonsView">
-                                <rect key="frame" x="0.0" y="382.66666666666674" width="375" height="395.33333333333326"/>
+                                <rect key="frame" x="0.0" y="382" width="375" height="395.33333333333326"/>
                                 <subviews>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HOd-U7-H3g">
-                                        <rect key="frame" x="37.333333333333343" y="173.99999999999994" width="299.33333333333326" height="47.666666666666657"/>
+                                        <rect key="frame" x="37.333333333333343" y="174" width="299.33333333333326" height="47.666666666666657"/>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                         <state key="normal" title="CREATE PARENT ACCOUNT" backgroundImage="btnOrange_L">
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="doGoToCreateAccount:" destination="b6P-mi-Mj5" eventType="touchUpInside" id="UnO-HZ-l2g"/>
+                                            <action selector="parentRegistrationBtn:" destination="b6P-mi-Mj5" eventType="touchUpInside" id="MS3-yd-icn"/>
+                                            <segue destination="zGP-ut-peX" kind="presentation" identifier="createParentSeque" id="Uvd-9Z-Mcz"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3vO-m1-Z8a">
-                                        <rect key="frame" x="37.333333333333343" y="266.66666666666669" width="299.33333333333326" height="47.666666666666686"/>
+                                        <rect key="frame" x="37.333333333333343" y="266.66666666666663" width="299.33333333333326" height="47.666666666666686"/>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                         <state key="normal" title="CREATE CHILD ACCOUNT" backgroundImage="btnRed_L">
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="doGoToCreateAccount:" destination="b6P-mi-Mj5" eventType="touchUpInside" id="auY-AK-EQH"/>
+                                            <action selector="childRegistrationBtn:" destination="b6P-mi-Mj5" eventType="touchUpInside" id="UEC-3s-LzI"/>
+                                            <segue destination="zGP-ut-peX" kind="presentation" identifier="createChildSegue" id="g4J-hT-t2y"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -2119,13 +2121,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qvy-Fa-oBF"/>
                     </view>
-                    <connections>
-                        <segue destination="zGP-ut-peX" kind="presentation" identifier="createAccountSegue" id="wks-fc-lt5"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Cf-7n-eJh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-162.40000000000001" y="-522.18890554722645"/>
+            <point key="canvasLocation" x="-386" y="-522"/>
         </scene>
         <!--Create Account View Controller-->
         <scene sceneID="ZXZ-4T-lF4">
@@ -3396,9 +3395,9 @@
         <image name="topBar_L" width="766" height="55"/>
     </resources>
     <inferredMetricsTieBreakers>
-
         <segue reference="OOd-9u-YyK"/>
-        <segue reference="bm7-WQ-ArU"/>
+        <segue reference="mSl-Ec-VBM"/>
+        <segue reference="g4J-hT-t2y"/>
         <segue reference="hWK-av-BXc"/>
         <segue reference="2fd-cb-KRq"/>
         <segue reference="HOK-Pp-4Xx"/>
