It said there was an error when I tried to commit on the Andrew branch, and then didn't give me the option to try to commit again. Also, the commit didn't show up in the repo I created this branch to try to commit again.
Updates pages like the email you sent me, and handles if the user is new or an existing member

--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -2929,7 +2929,7 @@
         <image name="topBar_L" width="766" height="55"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="0ls-Pt-Ljb"/>
+        <segue reference="Gxm-IN-KRx"/>
         <segue reference="bm7-WQ-ArU"/>
         <segue reference="7lE-kw-Qut"/>
         <segue reference="3RF-ku-Rgp"/>
